--- a/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.scss
+++ b/src/app/home/b2b-flows-manage/node-properties/input-data-selector/input-data-selector.component.scss
@@ -1,6 +1,16 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
+.header-item {
+    overflow: hidden;
+    height: 36px;
+}
+
+.icon {
+    width: 32px;
+    height: 32px;
+}
+
 .overlay {
     height: 100vh;
     width: 100vw;
@@ -14,10 +24,14 @@
     top: 0px;
     right: -800px;
     z-index: 3;
-    width: 800px;
+    width: 360px;
     height: 100vh;
     overflow-y: auto;
     transition: 0.2s;
+
+    &.more-width {
+        width: 800px;
+    }
 
     &.show {
         right: 0px;
