--- a/src/app/home/b2b-flows-manage/path-properties/path-condition-creator/path-condition-creator.component.scss
+++ b/src/app/home/b2b-flows-manage/path-properties/path-condition-creator/path-condition-creator.component.scss
@@ -1,17 +1,26 @@
 @import "src/assets/scss/bootstrap/_functions.scss";
 @import "src/assets/scss/bootstrap/_variables.scss";
 
-.selected-color {
-    width: 82px;
-    height: 32px;
-}
 
 .header-item {
     overflow: hidden;
-    height: 36px;
+    min-height: 36px;
 }
 
 .icon {
     width: 32px;
     height: 32px;
+}
+
+.min-width {
+    min-width: 60px;
+}
+
+.condition-window {
+    width: 559px;
+    height: 100vh;
+    overflow-y: auto;
+    top: 0;
+    right: 0;
+    z-index: 1;
 }
