--- a/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-properties.component.html
@@ -170,14 +170,19 @@
             </odp-input-data-selector>
         </div>
         <div class="border rounded p-3">
-            <div class="border-bottom font-14 fw-500 mb-3 pb-1">Configure Retry</div>
+            <div class="border-bottom font-14 fw-500 mb-3 pb-1">Advance Settings</div>
+            <div class="form-group position-relative">
+                <label class="font-14 fw-400 text-dark" for="requestTimeout">Timeout (sec)</label>
+                <input id="requestTimeout" class="form-control" type="number" [(ngModel)]="currNode.options.timeout">
+            </div>
             <div class="form-group position-relative">
                 <label class="font-14 fw-400 text-dark" for="retryCount">Retry Count</label>
                 <input id="retryCount" class="form-control" type="number" [(ngModel)]="currNode.options.retry.count">
             </div>
             <div class="form-group position-relative mb-0">
                 <label class="font-14 fw-400 text-dark" for="retryInterval">Retry Interval (sec)</label>
-                <input id="retryInterval" class="form-control" type="number" [(ngModel)]="currNode.options.retry.interval">
+                <input id="retryInterval" class="form-control" type="number"
+                    [(ngModel)]="currNode.options.retry.interval">
             </div>
         </div>
     </ng-container>
