--- a/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
+++ b/src/app/home/b2b-flows-manage/node-properties/node-data-selector/node-data-selector.component.html
@@ -5,7 +5,7 @@
         <span>Configure</span>
     </button> -->
     <ng-container *ngIf="currentValue">
-        <span class="fw-500 rounded bg-light p-2 border font-12 d-flex align-items-center"
+        <span class="word-wrap fw-500 rounded bg-light p-2 border font-12 d-flex align-items-center"
             [innerHTML]="userSelectedValue"></span>
         <!-- <button type="button" class="btn btn-link p-0 d-flex align-items-center ml-3" ngbTooltip="Re-Configure"
             (click)="onClick($event)">
