--- a/src/app/utils/styled-text/styled-text.component.html
+++ b/src/app/utils/styled-text/styled-text.component.html
@@ -1,4 +1,19 @@
 <div class="value-holder position-relative" (dblclick)="onDblClick.emit()">
-  <div class="value-holder content-div d-flex align-items-center" [innerHTML]="formattedText" #contentDiv></div>
-  <div class="value-holder hidden-div" (input)="someTrigger($event)" (click)="check()" contenteditable #hiddenDiv></div>
+  <div id="hidden-div" class="value-holder d-flex" (input)="someTrigger($event)" contenteditable #hiddenDiv>
+  </div>
+  <!-- <div id="class-div" class="value-holder content-div d-flex align-items-center" [innerHTML]="formattedText"
+    #contentDiv></div> -->
 </div>
+
+
+<div *ngIf="suggestions.length > 0" class="more-options bg-white rounded list-group position-fixed border">
+  <div class="list-group-item list-group-item-action py-2 border-0" *ngFor="let suggestion of suggestions"
+    (click)="selectItem(suggestion)">
+    {{suggestion}}
+  </div>
+</div>
+
+
+<!-- <div *ngIf="suggestions?.length">
+  <option *ngFor="let suggestion of suggestions" [label]="suggestion" [value]="suggestion">{{ suggestion }}</option>
+</div> -->
