--- a/src/app/home/b2b-flows/b2b-flows.component.html
+++ b/src/app/home/b2b-flows/b2b-flows.component.html
@@ -14,6 +14,10 @@
         </div>
         <div class="d-flex align-items-center">
             <odp-search-box (enteredText)="searchTerm=$event" (reset)="searchTerm=null"></odp-search-box>
+            <button type="button" id="data-management" class="btn btn-white d-flex align-items-center border ml-3"
+            [routerLink]="['settings']" >
+            <span class="dsi dsi-settings text-secondary"></span>
+          </button>
             <button id="createFlow" type="button" class="add-new btn btn-primary ml-3 d-flex align-items-center"
                 (click)="newFlow()" [disabled]="!hasWritePermission('FLOW')">
                 <span class="dsi dsi-plus mr-2"></span>
