--- a/src/app/home/agents/agent-view/agent-view.component.html
+++ b/src/app/home/agents/agent-view/agent-view.component.html
@@ -305,7 +305,7 @@
         </div>
         <div class="d-flex w-100 mt-auto">
             <button *ngIf="showEditAgentWindow" type="button" class="btn btn-primary w-100" id="newAgentModalCreate"
-                [disabled]="!agentDetails.name" (click)="triggerAgentEdit()">Savehi</button>
+                [disabled]="!agentDetails.name" (click)="triggerAgentEdit()">Save</button>
         </div>
     </div>
 
